[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
cpal = { version = "0.15", features = ["oboe-shared-stdcxx"] }
[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6", features = ["java-interface", "shared-stdcxx"] }
